Added React component to /room

--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-hot-loader": ">=4.6.5",
+    "react-router-dom": "^5.0.0",
     "request": "^2.88.0",
     "sanitize.css": ">=8.0.0",
     "uuid": "^3.3.2",
