--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
   "dependencies": {
     "airbnb-browser-shims": ">=3.1.0",
     "babel-polyfill": ">=6.26.0",
-    "body-parser": ">=1.18.3",
+    "body-parser": "^1.19.0",
     "compression": ">=1.7.3",
     "cookie-parser": "^1.4.4",
     "eslint-config-airbnb": ">=17.1.0",
@@ -79,6 +79,7 @@
     "method-override": "^3.0.0",
     "pg": "^7.8.0",
     "prop-types": ">=15.7.2",
+    "qs": "^6.7.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-hot-loader": ">=4.6.5",
