--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "webpack-merge": ">=4.2.1"
   },
   "dependencies": {
+    "@material-ui/core": "^4.0.0",
+    "@material-ui/icons": "^4.0.0",
     "airbnb-browser-shims": ">=3.1.0",
     "babel-polyfill": ">=6.26.0",
     "body-parser": "^1.19.0",
