--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
     "airbnb-browser-shims": ">=3.1.0",
     "babel-polyfill": ">=6.26.0",
     "body-parser": "^1.19.0",
+    "chart.js": "^2.8.0",
+    "chartjs-plugin-annotation": "^0.5.7",
     "compression": ">=1.7.3",
     "cookie-parser": "^1.4.4",
     "eslint-config-airbnb": ">=17.1.0",
@@ -83,6 +85,7 @@
     "prop-types": ">=15.7.2",
     "qs": "^6.7.0",
     "react": "^16.8.2",
+    "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.2",
     "react-hot-loader": ">=4.6.5",
     "react-router-dom": "^5.0.0",
