--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "rimraf": ">=2.6.3",
     "sass-loader": ">=7.1.0",
     "style-loader": ">=0.23.1",
+    "terser-webpack-plugin": "^1.3.0",
     "uglifyjs-webpack-plugin": ">=2.1.1",
     "webpack-cli": ">=3.2.3",
     "webpack-merge": ">=4.2.1"
